# Software_engineering_task_2

./: CMakeLists.txt  README.md  main.cpp
lib/: Calculator.cpp  Calculator.h
tests/: calc_tests.cpp  main_tests.cpp
